--- a/styles/style.css
+++ b/styles/style.css
@@ -106,3 +106,66 @@ hr {
     font-size: 18px;
     color: #B3B3B3;
 }
+
+/* Our Donate Plan--------------- */
+.donate-plan {
+    text-align: center;
+    width: 691px;
+    height: 130px;
+    margin: auto;
+    margin-top: 130px;
+}
+
+.donate-title {
+    font-size: 45px;
+    font-weight: 700;
+    color: #121212;
+    margin-bottom: 20px;
+}
+
+.donate-description {
+    font-size: 18px;
+    font-weight: 400;
+    color: #707070;
+}
+
+.donate-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+    margin: 0 100px;
+    margin-top: 50px;
+    margin-bottom: 130px;
+}
+
+.box {
+    border-radius: 5px;
+    padding: 30px;
+    height: 300px;
+}
+
+.donate-box-title {
+    font-weight: 600;
+    font-size: 24px;
+    color: #121212;
+    margin: 31px 0 16px 0;
+}
+
+.donate-box-description {
+    font-weight: 400;
+    font-size: 16px;
+    color: #707070;
+}
+
+.donate-box-1 {
+    background: rgba(79, 157, 166, 0.1);
+}
+
+.donate-box-2 {
+    background: rgba(255, 89, 89, 0.1);
+}
+
+.donate-box-3 {
+    background: rgba(232, 222, 20, 0.1);
+}
